--- a/index.html
+++ b/index.html
@@ -2,12 +2,292 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <title>Hoolee Real Estate</title>
 </head>
 <body>
-    <h2 class="header-title">Welcome  Br</h2>
+    <!-- top header content -->
+    <header class="top-header">
+        <div class="container">
+            <div class="header-telephone">
+                <div class="tele">
+                    <a href="#" class="header-telephone-link">+330440220</a>
+                <span class="header-telephone-title"> / Contact@info.com</span>
+                </div>
+                <ion-icon name="person"></ion-icon>
+            </div>
+
+            <div class="hero-wrapper">
+                <div class="hero-logos">
+                    <img src="./images/hoolee-logo.png" alt="hoolee logo" class="logo">
+                    <ion-icon  id="menu__icon" size="large" class="hamburger" name="reorder"></ion-icon>
+                </div>
+                <nav class="nav" id="menu">
+                    <ul class="nav-list" id="nav-list">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Available</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Locations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <section class="hero">
+            <div class="container hero-container">
+                <div class="hero-sub-wrap">
+                     <h1 class="hero-title">Holland Real Estate</h1>
+                    <p class="hero-description">We are a full-service real estate agency established in 2005</p>
+                    <div class="btnfree">
+                <button class="hero-btn">
+                    List For Free
+                </button>
+                </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <div class="container about-container">
+                <div class="about-sub-wrap">
+                  <div class="about-inner-wrap">
+                    <h1 class="about-title">About Us</h1>
+                    <h5 class="about-sub-title">Welcome to our community!</h5>
+                    <p class="about-caption">
+                        Tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat.
+                    </p>
+                <div class="btnfree">
+                    <a href="" class="about-read-more">Read More</a>   
+                </div>
+                  </div>
+                <!-- <div class="about-img-wrap">
+                    <img src="./images/about.jpg" alt="" class="about-image"> 
+                  </div>  -->
+            </div>
+            </div>
+        </section>
+  
+    <section class="section services">
+        <div class="container">
+        <div class="service-wrapper">
+            <div class="service-col-right">
+                    <h1 class="service-title">Our Services</h1>
+            </div>
+            <div class="service-col-left">
+                <ul class="service-list">
+                    <li class=" service-item">
+                        <h3 class="service-item-title">Management & Leasing</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. 
+                        </p>
+                        <button class="service-read">Read More</button>
+                    </li>
+                    <li  class=" service-item">
+                        <h3 class="service-item-title">Sales & Rentals</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. 
+                        </p>
+                        <button class="service-read">Read More</button>
+                    </li>
+                    <li  class=" service-item">
+                        <h3 class="service-item-title">Investment Sales</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. 
+                        </p>
+                        <button class="service-read">Read More</button>
+                    </li>
+                    <li  class=" service-item">
+                        <h3 class="service-item-title">New Development</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. 
+                        </p>
+                        <button class="service-read">Read More</button>
+                    </li>
+                </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section listings">
+        <div class="container">
+            <div class="listing-wrapper">
+                <h1 class="listing-title">Featured Listing</h1>
+                <div class="listing-inner-wrapper">
+                    <div class="list-box">
+                        <img class="list-box-image" src="./images/listing.jpg" alt="">
+                        <h5 class="list-box-title">9631 Bridle Drive East Bridgewater, MA 02333</h5>
+                        <p class="list-box-price">$1400</p>
+                    </div>
+                    <div class="list-box">
+                        <img class="list-box-image" src="./images/listing.jpg" alt="">
+                        <h5 class="list-box-title">9631 Bridle Drive East Bridgewater, MA 02333</h5>
+                        <p class="list-box-price">$1400</p>
+                    </div>
+                    <div class="list-box">
+                        <img class="list-box-image" src="./images/listing.jpg" alt="">
+                        <h5 class="list-box-title">9631 Bridle Drive East Bridgewater, MA 02333</h5>
+                        <p class="list-box-price">$1400</p>
+                    </div>
+                    <div class="list-box">
+                        <img class="list-box-image" src="./images/listing.jpg" alt="">
+                        <h5 class="list-box-title">9631 Bridle Drive East Bridgewater, MA 02333</h5>
+                        <p class="list-box-price">$1400</p>
+                    </div>
+                    <div class="list-box">
+                        <img class="list-box-image" src="./images/listing.jpg" alt="">
+                        <h5 class="list-box-title">9631 Bridle Drive East Bridgewater, MA 02333</h5>
+                        <p class="list-box-price">$1400</p>
+                    </div>
+                    <div class="list-box">
+                        <img class="list-box-image" src="./images/listing.jpg" alt="">
+                        <h5 class="list-box-title">9631 Bridle Drive East Bridgewater, MA 02333</h5>
+                        <p class="list-box-price">$1400</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- parallax -->
+    <div class="gap">
+      </div>
+      <section class="form-paralax">
+        <div class="form-paralax-container">
+            <div>
+                <h3 class="form-parallax-title">Interested In Our Services</h3>
+            </div>
+          <form>
+            <div class="input-wrapper">
+              <div class="input-col">
+                <input placeholder="First name" type="text" />
+              </div>
+              <div class="input-col">
+                <input placeholder="Last name" type="text" />
+              </div>
+            </div>
+            <div class="input-wrapper-2">
+              <input placeholder="email" type="email" />
+              <input placeholder="Phone" type="tel" />
+              <input placeholder="Type of service" type="text" />
+            </div>
+            <textarea name="" id="" cols="30" rows="5"></textarea>
+            <button class="form-parallax-btn">Submit</button>
+          </form>
+        </div>
+      </section>
+  
+      <div class="gap"></div>
+      <!-- parallax -->
+ 
+    <section class="section customers">
+       <div class="container">
+           <div class="customers-wrapper">
+            <div class="customer-title-wrap">
+                <h1  class="customer-title">What Our Customers Say?</h1>
+            </div>
+            <ul class="customers-list">
+                <li class=" customers-item customer-border">
+                    <div class="customers-item-inner">
+                    <ion-icon class="customer-quote-icon" size="large" name="quote"></ion-icon>
+                    <p class="customer-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  
+                    </p>
+                    <quote class="customers-btn">Haruna</quote>
+                </div>
+                </li>
+                <li  class=" customers-item">
+                    <div class="customers-item-borderless" style="background-image: url('./images/testimonials-2.jpg'); background-position: center; background-size: cover; height: 100%;">
+                    </div>
+                </li>
+                <li  class=" customers-item customer-border">
+                    <div class="customers-item-inner">
+                        <ion-icon class="customer-quote-icon" size="large" name="quote"></ion-icon>
+                        <p class="customer-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  
+                        </p>
+                        <quote class="customers-btn">Umar</quote>
+                    </div>
+                </li>
+
+                <li  class=" customers-item">
+                    <div class="customers-item-borderless" style="background-image: url('./images/testimonials-3.jpg'); background-position: center; background-size: cover; height: 100%;">
+                    </div>
+                </li>
+                <li class=" customers-item">
+                    <div class="customers-item-inner">
+                        <ion-icon class="customer-quote-icon" size="large" name="quote"></ion-icon>
+                        <p class="customer-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  
+                        </p>
+                        <quote class="customers-btn">Haruna</quote>
+                    </div>
+                </li>
+                <li  class=" customers-item">
+                    <div class="customers-item-borderless" style="background-image: url('./images/testimonials-3.jpg'); background-position: center; background-size: cover; height: 100%;">
+                    </div>
+                </li>
+            </ul>
+        </div>
+       </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="site__footer">
+        <div class="container">
+            <div class="site__primary-footer">
+                <div class="site__footer-icon-wrap">
+                        <ion-icon class="footer-icons" size="large" name="logo-facebook"></ion-icon>
+                        <ion-icon class="footer-icons" size="large" name="logo-instagram"></ion-icon>
+                        <ion-icon class="footer-icons" size="large" name="logo-instagram"></ion-icon>
+                </div>
+                <div class="widget__telephone-wrap">
+                    <a href="tel:33333333" class="widget__gettelephone">33-333-333</a>
+                </div>
+                    <div class="site__primary-footer-2">
+                        <div class="site__primary-footer-nav-menu">
+                            <div class="site__menu-container">
+                                <div class="site__menu-column-1">
+                                    <a class="site__nav-widget-title">info@contact.com</a>
+                                </div>
+                                <div class="site__menu-address">
+                                   52800 Leverton Cove Road, Palmer,
+                                   MA 01069
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            <div class="site__footer-copyright">
+                <p class="copyright">Copyright &copy; 2022 Hoolee Real Estate Company</p>
+            </div>
+        </div>
+    </footer>
+    <!-- footer -->
+
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script src="./js/app.js"></script> 
 </body>
 </html>
