--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
 
             <div class="hero-wrapper">
                 <div class="hero-logos">
-                    <img src="./images/hoolee-logo.png" alt="hoolee logo" class="logo">
+                    <img src="./images/logo.9aa5c2f8.png" alt="hoolee logo" class="logo">
                     <ion-icon  id="menu__icon" size="large" class="hamburger" name="reorder"></ion-icon>
                 </div>
                 <nav class="nav" id="menu">
                     <ul class="nav-list" id="nav-list">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Available</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Locations</a>
+                            <a href="neighborhood.html" class="nav-link">Locations</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About</a>
+                            <a href="aboutpage.html" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Blog</a>
+                            <a href="blog.html" class="nav-link">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -55,7 +55,7 @@
         <section class="hero">
             <div class="container hero-container">
                 <div class="hero-sub-wrap">
-                     <h1 class="hero-title">Holland Real Estate</h1>
+                     <h1 class="hero-title">TAF Africa Global</h1>
                     <p class="hero-description">We are a full-service real estate agency established in 2005</p>
                     <div class="btnfree">
                 <button class="hero-btn">
@@ -81,9 +81,9 @@
                     <a href="" class="about-read-more">Read More</a>   
                 </div>
                   </div>
-                <!-- <div class="about-img-wrap">
-                    <img src="./images/about.jpg" alt="" class="about-image"> 
-                  </div>  -->
+                  <div class="home-about-section-img-wrap">
+                      <img src="" alt="" class="home-about-img">
+                  </div>
             </div>
             </div>
         </section>
@@ -136,12 +136,12 @@
                 <h1 class="listing-title">Featured Listing</h1>
                 <div class="listing-inner-wrapper">
                     <div class="list-box">
-                        <img class="list-box-image" src="./images/listing.jpg" alt="">
+                        <img class="list-box-image" src="./images/taf-two.JPG" alt="">
                         <h5 class="list-box-title">9631 Bridle Drive East Bridgewater, MA 02333</h5>
                         <p class="list-box-price">$1400</p>
                     </div>
                     <div class="list-box">
-                        <img class="list-box-image" src="./images/listing.jpg" alt="">
+                        <img class="list-box-image" src="./images/taf-three.jpg" alt="">
                         <h5 class="list-box-title">9631 Bridle Drive East Bridgewater, MA 02333</h5>
                         <p class="list-box-price">$1400</p>
                     </div>
@@ -176,7 +176,7 @@
       </div>
       <section class="form-paralax">
         <div class="form-paralax-container">
-            <div>
+            <div class="form-parallax-title">
                 <h3 class="form-parallax-title">Interested In Our Services</h3>
             </div>
           <form>
@@ -205,7 +205,7 @@
     <section class="section customers">
        <div class="container">
            <div class="customers-wrapper">
-            <div class="customer-title-wrap">
+            <div class="customer-title-wrap">   
                 <h1  class="customer-title">What Our Customers Say?</h1>
             </div>
             <ul class="customers-list">
