chnages to form parallax title

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </div>
       <section class="form-paralax">
         <div class="form-paralax-container">
-            <div class="form-parallax-title">
+            <div class="form-parallax-title-wrap">
                 <h3 class="form-parallax-title">Interested In Our Services</h3>
             </div>
           <form>
