work for droppdown

--- a/exclusiverental.html
+++ b/exclusiverental.html
@@ -8,20 +8,21 @@
     <title>Exclusive Rentals</title>
 </head>
 <body>
+    <section class="telephone-section">
+        <div class="container header-telephone">
+            <div class="tele">
+                <span class="header-telephone-link">+330440220</span>
+                <a href="#" class="header-telephone-title"> / Contact@info.com</a>
+            </div>
+            <ion-icon name="person"></ion-icon>
+        </div>
+    </section>
       <!-- top header content -->
       <header class="top-header">
         <div class="container">
-            <div class="header-telephone">
-                <div class="tele">
-                    <a href="#" class="header-telephone-link">+330440220</a>
-                <span class="header-telephone-title"> / Contact@info.com</span>
-                </div>
-                <ion-icon name="person"></ion-icon>
-            </div>
-
             <div class="hero-wrapper">
                 <div class="hero-logos">
-                    <img src="./images/hoolee-logo.png" alt="hoolee logo" class="logo">
+                    <img src="./images/logo.9aa5c2f8.png" alt="hoolee logo" class="logo">
                     <ion-icon  id="menu__icon" size="large" class="hamburger" name="reorder"></ion-icon>
                 </div>
                 <nav class="nav" id="menu">
@@ -30,7 +31,20 @@
                             <a href="#" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Available</a>
+                            <a href="#" class="nav-link">Available Properties</a>
+                            <div class="dropdown-menu">
+                                <ul class="dropdown-list">
+                                    <li class="dropdown-item">
+                                        <a href="exclusive.html" class="dropdown-link">Exclusive</a>
+                                    </li>
+                                    <li class="dropdown-item">
+                                        <a href="exclusiverental.html" class="dropdown-link">Rental</a>
+                                    </li>
+                                    <li class="dropdown-item">
+                                        <a href="luxurybuilding.html" class="dropdown-link">Luxury</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Locations</a>
