--- a/neighborhood.html
+++ b/neighborhood.html
@@ -8,20 +8,21 @@
     <title>Neighborhoods</title>
 </head>
 <body>
+    <section class="telephone-section">
+        <div class="container header-telephone">
+            <div class="tele">
+                <span class="header-telephone-link">+330440220</span>
+                <a href="#" class="header-telephone-title"> / Contact@info.com</a>
+            </div>
+            <ion-icon name="person"></ion-icon>
+        </div>
+    </section>
       <!-- top header content -->
       <header class="top-header">
         <div class="container">
-            <div class="header-telephone">
-                <div class="tele">
-                    <a href="#" class="header-telephone-link">+330440220</a>
-                <span class="header-telephone-title"> / Contact@info.com</span>
-                </div>
-                <ion-icon name="person"></ion-icon>
-            </div>
-
             <div class="hero-wrapper">
                 <div class="hero-logos">
-                    <img src="./images/hoolee-logo.png" alt="hoolee logo" class="logo">
+                    <img src="./images/logo.9aa5c2f8.png" alt="hoolee logo" class="logo">
                     <ion-icon  id="menu__icon" size="large" class="hamburger" name="reorder"></ion-icon>
                 </div>
                 <nav class="nav" id="menu">
@@ -42,7 +43,7 @@
                             <a href="blog.html" class="nav-link">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -62,25 +63,25 @@
 <section class="neighborhoods">
     <div class="container">
      <ul class="neighborhood-list">
-        <li class="neihborhood-item neighborhood-gap">
+        <li class="neighborhood-item neighborhood-gap">
             <a href="#" class="neighborhood-link">Dorchester</a>
         </li>
-        <li class="neihborhood-item">
+        <li class="neighborhood-item">
             <a href="#" class="neighborhood-link">Allston</a>
         </li>
-        <li class="neihborhood-item">
+        <li class="neighborhood-item">
             <a href="#" class="neighborhood-link">Roxbury</a>
         </li>
      </ul>
      <!-- neighborhoods first row -->
      <ul class="neighborhood-list">
-        <li class="neihborhood-item">
+        <li class="neighborhood-item">
             <a href="#" class="neighborhood-link">Jamaica Plain</a>
         </li>
-        <li class="neihborhood-item">
+        <li class="neighborhood-item">
             <a href="#" class="neighborhood-link">Back Bay</a>
         </li>
-        <li class="neihborhood-item">
+        <li class="neighborhood-item">
             <a href="#" class="neighborhood-link">North End</a>
         </li>
      </ul>
