--- a/contact.html
+++ b/contact.html
@@ -8,17 +8,18 @@
     <title>Contact</title>
 </head>
 <body>
+    <section class="telephone-section">
+        <div class="container header-telephone">
+            <div class="tele">
+                <span class="header-telephone-link">+330440220</span>
+                <a href="#" class="header-telephone-title"> / Contact@info.com</a>
+            </div>
+            <ion-icon name="person"></ion-icon>
+        </div>
+    </section>
       <!-- top header content -->
       <header class="top-header blog-post-header-wrapper">
         <div class="container">
-            <div class="header-telephone">
-                <div class="tele">
-                    <a href="#" class="header-telephone-link">+330440220</a>
-                <span class="header-telephone-title"> / Contact@info.com</span>
-                </div>
-                <ion-icon name="person"></ion-icon>
-            </div>
-
             <div class="hero-wrapper hero-warpper-blog-bg">
                 <div class="hero-logos">
                     <img src="./images/logo.9aa5c2f8.png" alt="hoolee logo" class="logo">
@@ -30,13 +31,20 @@
                             <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Available</a>
-                            <select name="" id="" class="nav-select">
-                                <a href="exclusive.html">
-                                    Name
-                                </a>
-                                
-                            </select>
+                            <a href="#" class="nav-link">Available Properties</a>
+                            <div class="dropdown-menu">
+                                <ul class="dropdown-list">
+                                    <li class="dropdown-item">
+                                        <a href="exclusive.html" class="dropdown-link">Exclusive</a>
+                                    </li>
+                                    <li class="dropdown-item">
+                                        <a href="exclusiverental.html" class="dropdown-link">Rental</a>
+                                    </li>
+                                    <li class="dropdown-item">
+                                        <a href="luxurybuilding.html" class="dropdown-link">Luxury</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a href="neighborhood.html" class="nav-link">Locations</a>
