--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <title>Hoolee Real Estate</title>
 </head>
 <body>
+    <section class="telephone-section">
+        <div class="container header-telephone">
+            <div class="tele">
+                <span class="header-telephone-link">+330440220</span>
+                <a href="#" class="header-telephone-title"> / Contact@info.com</a>
+            </div>
+            <ion-icon name="person"></ion-icon>
+        </div>
+    </section>
     <!-- top header content -->
     <header class="top-header">
         <div class="container">
-            <div class="header-telephone">
-                <div class="tele">
-                    <a href="#" class="header-telephone-link">+330440220</a>
-                <span class="header-telephone-title"> / Contact@info.com</span>
-                </div>
-                <ion-icon name="person"></ion-icon>
-            </div>
-
             <div class="hero-wrapper">
                 <div class="hero-logos">
                     <img src="./images/logo.9aa5c2f8.png" alt="hoolee logo" class="logo">
@@ -33,7 +34,20 @@
                             <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Available</a>
+                            <a href="#" class="nav-link">Available Properties<ion-icon name="chevron-down"></ion-icon></a>
+                            <div class="dropdown-menu">
+                                <ul class="dropdown-list">
+                                    <li class="dropdown-item">
+                                        <a href="exclusive.html" class="dropdown-link">Exclusive</a>
+                                    </li>
+                                    <li class="dropdown-item">
+                                        <a href="exclusiverental.html" class="dropdown-link">Rental</a>
+                                    </li>
+                                    <li class="dropdown-item">
+                                        <a href="luxurybuilding.html" class="dropdown-link">Luxury</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a href="neighborhood.html" class="nav-link">Locations</a>
@@ -51,6 +65,7 @@
                 </nav>
             </div>
         </div>
+        </header>
 
         <section class="hero">
             <div class="container hero-container">
@@ -170,7 +185,6 @@
         </div>
     </section>
 
-
     <!-- parallax -->
     <div class="gap">
       </div>
@@ -193,7 +207,7 @@
               <input placeholder="Phone" type="tel" />
               <input placeholder="Type of service" type="text" />
             </div>
-            <textarea name="" id="" cols="30" rows="5"></textarea>
+            <textarea placeholder="Reason you are looking for professional management" name="" id="" cols="30" rows="5"></textarea>
             <button class="form-parallax-btn">Submit</button>
           </form>
         </div>
