changes for font sizes

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -75,8 +75,8 @@
 <section class="about-contents">
     <div class="container">
         <div class="about-content-wrapper">
-            <!-- <h1 class="aboutpage-title">Who We Are</h1> -->
-            <h1 class="listing-title">Who We Are</h1>
+            <h1 class="aboutpage-title">Who We Are</h1>
+            <!-- <h1 class="listing-title">Who We Are</h1> -->
 
         </div>
     </div>
