changesfor images hieght and width

--- a/exclusive.html
+++ b/exclusive.html
@@ -79,7 +79,7 @@
           <ul class="exclusive-list">
            <div>
             <li class="exclusive-item">
-                <img src="./images/ex-1.jpg" alt="">
+                <img class="exclusive-img" src="./images/ex-1.jpg" alt="">
                 <p class="exclusive-item-title">
                     9631 North Bridle East Bridgewater, MA 02333
                 </p>
@@ -100,7 +100,7 @@
 
            <div>
             <li class="exclusive-item">
-                <img src="./images/ex-1.jpg" alt="">
+                <img class="exclusive-img" src="./images/ex-1.jpg" alt="">
                 <p class="exclusive-item-title">
                     9631 North Bridle East Bridgewater, MA 02333
                 </p>
@@ -121,7 +121,7 @@
 
            <div>
             <li class="exclusive-item">
-                <img src="./images/ex-1.jpg" alt="">
+                <img class="exclusive-img" src="./images/ex-1.jpg" alt="">
                 <p class="exclusive-item-title">
                     9631 North Bridle East Bridgewater, MA 02333
                 </p>
@@ -144,7 +144,7 @@
         <ul class="exclusive-list">
             <div>
              <li class="exclusive-item">
-                 <img src="./images/ex-1.jpg" alt="">
+                 <img  class="exclusive-img" src="./images/ex-1.jpg" alt="">
                  <p class="exclusive-item-title">
                      9631 North Bridle East Bridgewater, MA 02333
                  </p>
@@ -165,7 +165,7 @@
  
             <div>
              <li class="exclusive-item">
-                 <img src="./images/ex-1.jpg" alt="">
+                 <img  class="exclusive-img" src="./images/ex-1.jpg" alt="">
                  <p class="exclusive-item-title">
                      9631 North Bridle East Bridgewater, MA 02333
                  </p>
@@ -186,7 +186,7 @@
  
             <div>
              <li class="exclusive-item">
-                 <img src="./images/ex-1.jpg" alt="">
+                 <img  class="exclusive-img" src="./images/ex-1.jpg" alt="">
                  <p class="exclusive-item-title">
                      9631 North Bridle East Bridgewater, MA 02333
                  </p>
@@ -209,7 +209,7 @@
            <ul class="exclusive-list">
             <div>
              <li class="exclusive-item">
-                 <img src="./images/ex-1.jpg" alt="">
+                 <img  class="exclusive-img" src="./images/ex-1.jpg" alt="">
                  <p class="exclusive-item-title">
                      9631 North Bridle East Bridgewater, MA 02333
                  </p>
@@ -230,7 +230,7 @@
  
             <div>
              <li class="exclusive-item">
-                 <img src="./images/ex-1.jpg" alt="">
+                 <img  class="exclusive-img" src="./images/ex-1.jpg" alt="">
                  <p class="exclusive-item-title">
                      9631 North Bridle East Bridgewater, MA 02333
                  </p>
@@ -251,7 +251,7 @@
  
             <div>
              <li class="exclusive-item">
-                 <img src="./images/ex-1.jpg" alt="">
+                 <img  class="exclusive-img" src="./images/ex-1.jpg" alt="">
                  <p class="exclusive-item-title">
                      9631 North Bridle East Bridgewater, MA 02333
                  </p>
